fixed white space when sidebar translate

--- a/css/menu.css
+++ b/css/menu.css
@@ -111,18 +111,21 @@
   background-color: #2e2e2e;
   font-size: 15px;
   translate: 0 -100%;
-  transition: translate 0.5s ease-in-out;
+  display: none;
 }
 
 @media (max-width: 768px) {
   .sidebar {
     translate: 100%;
     height: 100vh;
+    /* display: inline-block; */
   }
 }
 
 .hamburger__menu:has(input:checked) + .sidebar {
   translate: 0;
+  display: block;
+
 }
 
 .sidebar ul {
